<resources>
    <string name="app_name">Let\'s plant</string>
    <string name="name">Let\'s plant</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="question">What about your plant ?</string>
    <string name="what_is_the_name_of_the_plant">What is the name of your plant?</string>
    <string name="what_type_of_plant_is_it">What type of plant is it?</string>
    <string name="when_was_it_planted">When was it planted?</string>
    <string name="how_would_you_describe_it">How would you describe it?</string>
    <string name="create">Create</string>
</resources>
