<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreatePlantActivity">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/name_text"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/question"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/name_edit"
            style="@style/NameStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_is_the_name_of_the_plant"
            android:inputType="textMultiLine|textPersonName" />

        <EditText
            android:id="@+id/type_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/what_type_of_plant_is_it"
            android:inputType="textMultiLine|textPersonName" />

        <EditText
            android:id="@+id/date_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/when_was_it_planted"
            android:inputType="date" />

        <EditText
            android:id="@+id/description_edit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/how_would_you_describe_it"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/done_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/create" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>